tests/ui/type/type-parameter-defaults-referencing-Self-ppaux.stderr
error[E0620]: cast to unsized type: `i32` as `dyn MyAdd<i32>`
  --> $DIR/type-parameter-defaults-referencing-Self-ppaux.rs:14:13
   |
LL |     let y = x as dyn MyAdd<i32>;
   |             ^^^^^^^^^^^^^^^^^^^
   |
help: consider using a box or reference as appropriate
  --> $DIR/type-parameter-defaults-referencing-Self-ppaux.rs:14:13
   |
LL |     let y = x as dyn MyAdd<i32>;
   |             ^

error[E0038]: the trait `MyAdd` is not dyn compatible
  --> $DIR/type-parameter-defaults-referencing-Self-ppaux.rs:14:18
   |
LL |     let y = x as dyn MyAdd<i32>;
   |                  ^^^^^^^^^^^^^^ `MyAdd` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/type-parameter-defaults-referencing-Self-ppaux.rs:6:55
   |
LL | trait MyAdd<Rhs=Self> { fn add(&self, other: &Rhs) -> Self; }
   |       ----- this trait is not dyn compatible...       ^^^^ ...because method `add` references the `Self` type in its return type
   = help: consider moving `add` to another trait
   = help: only type `i32` implements `MyAdd`; consider using it directly instead.

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0038, E0620.
For more information about an error, try `rustc --explain E0038`.
